[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/ui/TitleBanner.png" type="Texture" id=1]
[ext_resource path="res://assets/ui/statsmenubg2.png" type="Texture" id=2]
[ext_resource path="res://src/ui/UiTextButtonLabel.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/fonts/BarlowCondensed-BlackItalic.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/fonts/BubbleRainbow-VGdn0.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://src/ui/PauseMenu.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=11]
size = 45
outline_color = Color( 0.243137, 0.27451, 0.313726, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=12]
size = 24
outline_size = 3
outline_color = Color( 0.188235, 0.219608, 0.262745, 1 )
font_data = ExtResource( 5 )

[node name="PauseMenu" type="Node2D"]
pause_mode = 2
script = ExtResource( 6 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0, 0, 0, 0.6 )

[node name="TitleBanner" type="Sprite" parent="."]
position = Vector2( 640, 134 )
scale = Vector2( 5, 5 )
texture = ExtResource( 1 )

[node name="Statsmenubg" type="Sprite" parent="."]
position = Vector2( 640, 376 )
scale = Vector2( 6.66667, 6.66667 )
texture = ExtResource( 2 )

[node name="TitleLabel" type="Label" parent="."]
margin_top = 102.0
margin_right = 1278.0
margin_bottom = 156.0
custom_colors/font_color = Color( 0.243137, 0.27451, 0.313726, 1 )
custom_fonts/font = SubResource( 11 )
text = "PAUSED"
align = 1
valign = 1

[node name="PauseResumeBtn" type="TextureButton" parent="."]
margin_left = 880.0
margin_top = 552.0
margin_right = 952.0
margin_bottom = 585.0

[node name="Label" type="Label" parent="PauseResumeBtn"]
margin_right = 71.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 3 )
text = "RESUME"
align = 1
valign = 1

[node name="MainMenuBtn" type="TextureButton" parent="."]
margin_left = 328.0
margin_top = 552.0
margin_right = 432.0
margin_bottom = 585.0

[node name="Label" type="Label" parent="MainMenuBtn"]
margin_right = 71.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 3 )
text = "MAIN MENU"
align = 1
valign = 1

[node name="BGMLabel" type="Label" parent="."]
margin_left = 368.0
margin_top = 256.0
margin_right = 565.0
margin_bottom = 296.0
custom_fonts/font = SubResource( 12 )
text = "BACKGROUND MUSIC:"
align = 2
valign = 1

[node name="BGMSlide" type="HSlider" parent="."]
margin_left = 712.0
margin_top = 264.0
margin_right = 885.0
margin_bottom = 280.0
rect_scale = Vector2( 1.25, 1.25 )
min_value = -80.0
max_value = 0.0
ticks_on_borders = true

[node name="SFXLabel" type="Label" parent="."]
margin_left = 376.75
margin_top = 312.0
margin_right = 563.75
margin_bottom = 352.0
custom_fonts/font = SubResource( 12 )
text = "SOUND EFFECTS:"
align = 2
valign = 1

[node name="SFXSlide" type="HSlider" parent="."]
margin_left = 712.0
margin_top = 320.0
margin_right = 885.0
margin_bottom = 336.0
rect_scale = Vector2( 1.25, 1.25 )
min_value = -80.0
max_value = 0.0
ticks_on_borders = true

[connection signal="pressed" from="PauseResumeBtn" to="." method="_on_PauseResumeBtn_pressed"]
[connection signal="pressed" from="MainMenuBtn" to="." method="_on_MainMenuBtn_pressed"]
[connection signal="value_changed" from="BGMSlide" to="." method="_on_BGMSlide_value_changed"]
[connection signal="drag_ended" from="SFXSlide" to="." method="_on_SFXSlide_drag_ended"]
